dateranger is functional on timeline

--- a/partials/planboard.html
+++ b/partials/planboard.html
@@ -22,12 +22,18 @@
     <div class="control-group input-append pull-left"
           style="margin-right: 5px;">
       <input type="text" 
-            name="range" 
+            style="width: 165px" 
+            name="daterange" 
+            ng-model="daterange" 
             daterangepicker="">
       <button type="button" 
-              class="btn"><i class="icon-calendar"></i></button>
+              ng-click="setTimelineRange()"
+              class="btn">Go</button>
     </div>
     <!-- end dateranger -->
+
+
+    //ranges : {{daterange}}
 
 
     <!-- view togglers -->
@@ -37,11 +43,11 @@
           style="margin-right: 5px">
       <button type="button" 
               class="btn" 
-              ng-model="view.week" 
+              ng-model="timelineScope.week" 
               bs-button="">Week</button>
       <button type="button" 
               class="btn" 
-              ng-model="view.month" 
+              ng-model="timelineScope.month" 
               bs-button="">Month</button>
     </div>
     <!-- end view togglers -->
@@ -75,9 +81,9 @@
     <!-- groups list -->
     <!-- <span style="margin-left: 15px">Group</span> -->
     <select ng-model="state__" 
-            style="margin-top: 10px"
+            style="margin-top: 10px; width: 160px;"
             ng-options="option as value for (option, value) in groups">
-      <option value="">-- selecteer group --</option>
+      <option value="">-- group</option>
     </select>
     <!-- end groups list -->
 
@@ -85,9 +91,9 @@
     <!-- divisions list -->
     <!-- <span style="margin-left: 15px">Division</span> -->
     <select ng-model="state__" 
-            style="margin-top: 10px"
+            style="margin-top: 10px; width: 160px;"
             ng-options="option as value for (option, value) in divisions">
-      <option value="">-- selecteer division --</option>
+      <option value="">-- division</option>
     </select>
     <!-- end divisions list -->
 
