calculator for timestamps for all weeks in timeline

--- a/partials/planboard.html
+++ b/partials/planboard.html
@@ -1,9 +1,8 @@
 <!-- page header -->
 <div style="overflow:hidden;">
   <h2 class="pull-left">Planboard</h2>
-  <div class="pull-right" style="margin-top: 35px;">
-  <h4 class="pull-right"
-      style="font-weight: normal">{{range.from|nicelyDate}} / {{range.till|nicelyDate}}</h4>
+  <div class="pull-right" style="margin-top: 13px;">
+  <h4 style="font-weight: normal">{{range.from|nicelyDate}} / {{range.till|nicelyDate}}</h4>
   </div>
 </div>
 <!-- end page header -->
