--- a/partials/planboard.html
+++ b/partials/planboard.html
@@ -2,7 +2,7 @@
 <div style="overflow:hidden;">
   <h2 class="pull-left">Planboard</h2>
   <div class="pull-right" style="margin-top: 13px;">
-  <h4 style="font-weight: normal">{{range.from|nicelyDate}} / {{range.till|nicelyDate}}</h4>
+  <h4 style="font-weight: normal">{{range.from|nicelyDate}} / {{range.till|nicelyDate}}, Week: {{currentWeek}}</h4>
   </div>
 </div>
 <!-- end page header -->
@@ -35,17 +35,20 @@
 
     <!-- view togglers -->
     <div class="btn-group pull-left" 
-          bs-buttons-checkbox="" 
-          data-toggle="buttons-radio"
+          bs-buttons-radio 
+          ng-model="timelineScope"  
           style="margin-right: 5px">
+
+      <button type="button" 
+            class="btn" 
+              ng-model="week" 
+              ng-click="timelineScoper()">Week</button>
+
       <button type="button" 
               class="btn" 
-              ng-model="timelineScope.week" 
-              bs-button="">Week</button>
-      <button type="button" 
-              class="btn" 
-              ng-model="timelineScope.month" 
-              bs-button="">Month</button>
+              ng-model="month" 
+              ng-click="timelineScoper()">Month</button>
+
     </div>
     <!-- end view togglers -->
 
@@ -56,7 +59,7 @@
 
       <button type="button" 
               class="btn"
-              ng-click="timelineBefore()"><i class="icon-arrow-left"></i></button>
+              ng-click="timelineBefore(timelineScope)"><i class="icon-arrow-left"></i></button>
 
       <button type="button" 
               class="btn"
@@ -68,7 +71,7 @@
 
       <button type="button" 
               class="btn"
-              ng-click="timeline"><i class="icon-arrow-right"></i></button>  
+              ng-click="timelineAfter(timelineScope)"><i class="icon-arrow-right"></i></button>  
 
     </div>
     <!-- end timeline navigation -->
