--- a/partials/planboard.html
+++ b/partials/planboard.html
@@ -1,65 +1,76 @@
 <!-- page header -->
 <div style="overflow:hidden;">
   <h2 class="pull-left">Planboard</h2>
-  <div class="pull-right" style="margin-top: 13px;">
-  <h4 style="font-weight: normal">{{range.from|nicelyDate}} / {{range.till|nicelyDate}}, Week: {{currentWeek}}</h4>
+
+  <!-- range indicator -->
+  <div class="pull-right" style="margin-top: 13px; text-align: right">
+    <h4 style="font-weight: normal">
+      {{timeline.range|niceRange}}
+    </h4>
   </div>
+  <!-- end range indicator -->
+
 </div>
 <!-- end page header -->
 
 <hr>
 
-
 <!-- timeline controls -->
 <div class="row" style="padding-left: 30px; overflow: hidden">
-  
 
   <!-- core timeline controls -->
   <div class="pull-left" style="margin-top: 10px">
 
-
     <!-- dateranger -->
     <div class="control-group input-append pull-left"
           style="margin-right: 10px;">
+
       <input type="text" 
             style="width: 165px" 
             name="daterange" 
             ng-model="daterange" 
             daterangepicker="">
+
       <button type="button" 
               ng-click="setTimelineRange()"
               class="btn">Go</button>
+
     </div>
     <!-- end dateranger -->
 
-
-    <!-- view togglers -->
+    <!-- timeline scopers -->
     <div class="btn-group pull-left" 
-          bs-buttons-radio 
-          ng-model="timelineScope"  
-          style="margin-right: 5px">
-
-      <button type="button" 
-            class="btn" 
-              ng-model="week" 
-              ng-click="timelineScoper()">Week</button>
-
-      <button type="button" 
-              class="btn" 
-              ng-model="month" 
-              ng-click="timelineScoper()">Month</button>
-
-    </div>
-    <!-- end view togglers -->
-
-
-    <!-- timeline navigation -->
-    <div class="btn-group pull-left"
           style="margin-right: 5px">
 
       <button type="button" 
               class="btn"
-              ng-click="timelineBefore(timelineScope)"><i class="icon-arrow-left"></i></button>
+              ng-click="timelineBefore(timeline.scope)"><i class="icon-arrow-left"></i></button>
+
+      <button type="button" 
+              ng-model="timeline.scope.day" 
+              class="btn {{(timeline.scope.day==true) && 'active'}}" 
+              ng-click="timelineScoper('day')">Day</button>
+
+      <button type="button" 
+              ng-model="timeline.scope.week" 
+              class="btn {{(timeline.scope.week==true) && 'active'}}" 
+              ng-click="timelineScoper('week')">Week</button>
+
+      <button type="button" 
+              ng-model="timeline.scope.month" 
+              class="btn {{(timeline.scope.month==true) && 'active'}}" 
+              ng-click="timelineScoper('month')">Month</button>
+
+      <button type="button" 
+              class="btn"
+              ng-click="timelineAfter(timeline.scope)"><i class="icon-arrow-right"></i></button>  
+
+    </div>
+    <!-- end timeline scopers -->
+
+    <!-- timeline zooms -->
+    <div class="btn-group pull-left"
+          style="margin-right: 5px">
 
       <button type="button" 
               class="btn"
@@ -69,21 +80,14 @@
               class="btn"
               ng-click="timelineZoomOut()"><i class="icon-zoom-out"></i></button> 
 
-      <button type="button" 
-              class="btn"
-              ng-click="timelineAfter(timelineScope)"><i class="icon-arrow-right"></i></button>  
-
     </div>
-    <!-- end timeline navigation -->
-
+    <!-- end timeline zooms -->
 
   </div>
   <!-- end core timeline controls -->
 
-
   <!-- groups members controls -->
   <div class="pull-right">
-
 
     <!-- groups list -->
     <!-- <span style="margin-left: 15px">Group</span> -->
@@ -94,7 +98,6 @@
     </select>
     <!-- end groups list -->
 
-
     <!-- divisions list -->
     <!-- <span style="margin-left: 15px">Division</span> -->
     <select ng-model="state__" 
@@ -104,112 +107,112 @@
     </select>
     <!-- end divisions list -->
 
-
     <!-- timeline layout manager -->
     <div  class="btn-group" 
           style="margin-left: 15px" 
           bs-buttons-checkbox="" 
           data-toggle="buttons-checkbox">
+
       <button type="button" 
               class="btn" 
               ng-model="checkbox.left" 
               bs-button="">User</button>
+
       <button type="button" 
               class="btn" 
               ng-model="checkbox.middle" 
               bs-button="">Group</button>
+
       <button type="button" 
               class="btn" 
               ng-model="checkbox.right" 
               ng-click=""
               bs-button="">Team</button>
+
     </div>
     <!-- end timeline layout manager -->
-
 
   </div>
   <!--end groups members controls -->
 
-
 </div>
 <!-- end timeline controls -->
 
-
 <hr>
-
 
 <!-- slot controls -->
 <div class="row" style="padding-left: 30px">
   <form class="form-inline well">
 
-
     <!-- slot from -->
     <span>From</span>
-    
 
     <!-- date -->
     <div class="control-group input-append">
+
       <input  name="date-from" 
               class="input-small" 
               type="text" 
               ng-model="slot.from.date" 
               data-date-format="dd-mm-yyyy" 
               bs-datepicker="">
+
       <button type="button" 
               class="btn" 
               data-toggle="datepicker"><i class="icon-calendar"></i></button>
+
     </div>
     <!-- end date -->
 
-
     <!-- time -->
     <div class="control-group" style="display: inline">
+
       <input  name="time-from" 
               type="text" 
               class="input-small" 
               ng-model="slot.from.time" 
               bs-timepicker>
+
       <i class="icon-time" style="position: relative; margin: 2.5px 0 0 -24px;"></i>
     </div>
     <!-- end time -->
 
-
     <!-- end slot from -->
-
 
     <!-- slot till -->
     <span style="margin-left: 15px">Till</span>
 
-
     <!-- date -->
     <div class="control-group input-append">
+
       <input  name="date-till" 
               class="input-small" 
               type="text" 
               ng-model="slot.till.date" 
               data-date-format="dd-mm-yyyy" 
               bs-datepicker="">
+
       <button type="button" 
               class="btn" 
               data-toggle="datepicker"><i class="icon-calendar"></i></button>
+
     </div>
     <!-- end date -->
 
-
     <!-- time -->
     <div class="control-group" style="display: inline">
+
       <input  name="time-till" 
               type="text" 
               class="input-small" 
               ng-model="slot.till.time" 
               bs-timepicker>
+
       <i class="icon-time" style="position: relative; margin: 2.5px 0 0 -24px;"></i>
     </div>
     <!-- end time -->
 
-
     <!-- end slot till -->
-
 
     <!-- slot state -->
     <span style="margin-left: 15px">State</span>
@@ -219,7 +222,6 @@
     </select>
     <!-- end slot state -->
 
-
     <!-- slot recursive -->
     <button type="button" 
             class="btn" 
@@ -228,35 +230,36 @@
             bs-button>Wekelijks</button>
     <!-- end slot recursive -->
 
-
     <!-- slot actions -->
     <div  class="btn-group" 
           ng-hide="original" 
           style="display: inline; margin-left:10px">
+
       <button type="submit" 
               ng-click="add(slot)" 
               class="btn btn-success">Add</button>
+
     </div>
     <div  class="btn-group" 
           ng-show="original" 
           style="display: inline; margin-left:10px">
+
       <button type="submit" 
               ng-click="change(original, slot)" 
               class="btn btn-success">Change</button>
+
       <button type="submit" 
               ng-click="delete(slot.id)" 
               class="btn btn-danger">Delete</button>
+
     </div>
     <!-- end slot actions -->
-
 
   </form>
 </div>
 <!-- end slot controls -->
 
-
-
-<!-- timelines statistics -->
+<!-- timelines & statistics -->
 <div class="row" style="padding-left: 30px">
   <div class="tabbable tabs-left">
     
@@ -285,12 +288,24 @@
       
       <!-- timelines -->
       <div class="tab-pane active" id="timelineTab">
-
+        
+        <!-- timeline scope info -->
+        <div style="position: relative; top:40px; left: 20px; z-index: 1000">
+          <span ng-show="(timeline.scope.day)" class="label label-warning" style="padding: 5px">
+            Day: {{timeline.current.day}}
+          </span>
+          <span ng-show="(timeline.scope.week)" class="label label-warning" style="padding: 5px">
+            Week: {{timeline.current.week}}
+          </span>
+          <span ng-show="(timeline.scope.month)" class="label label-warning" style="padding: 5px">
+            Month: {{timeline.current.month}}
+          </span>
+        </div>
+        <!-- end timeline scope info -->
 
         <!-- user timeline -->
         <div id="myTimeline"></div>
         <!-- end user timeline -->
-
 
       </div>
       <!-- end timelines -->
@@ -301,10 +316,9 @@
       </div>
       <!-- end statistics -->
 
-
     </div>
     <!-- end tabs content -->
 
   </div>
 </div>
-<!-- end timelines statistics
+<!-- end timelines & statistics -->
