--- a/sass/_timeline.scss
+++ b/sass/_timeline.scss
@@ -253,6 +253,81 @@ div.timeline-navigation-move-right {
 
 
 
+
+.agg-less {
+    margin:0;
+    background-color: #a0a0a0;
+    /*border:1px solid #4f824f;*/
+    border-bottom: 10px solid #4f824f;
+    text-indent: -9999px;
+}
+.agg-even {
+    margin:0;
+    background-color: #ba6a24;
+    /*border:1px solid #4f824f;*/
+    border-bottom: 10px solid #4f824f;
+    text-indent: -9999px;
+}
+.agg-1 {
+    margin:0;
+    background-color: #415e6b;
+    /*border:1px solid #4f824f;*/
+    border-bottom: 10px solid #4f824f;
+    text-indent: -9999px;
+}
+.agg-2 {
+    margin:0;
+    background-color: #3d5865;
+    /*border:1px solid #4f824f;*/
+    border-bottom: 10px solid #4f824f;
+    text-indent: -9999px;
+}
+.agg-3 {
+    margin:0;
+    background-color: #3d5865;
+    /*border:1px solid #4f824f;*/
+    border-bottom: 10px solid #4f824f;
+    text-indent: -9999px;
+}
+.agg-4 {
+    margin:0;
+    background-color: #344c58;
+    /*border:1px solid #4f824f;*/
+    border-bottom: 10px solid #4f824f;
+    text-indent: -9999px;
+}
+.agg-5 {
+    margin:0;
+    background-color: #2f4550;
+    /*border:1px solid #4f824f;*/
+    border-bottom: 10px solid #4f824f;
+    text-indent: -9999px;
+}
+.agg-6 {
+    margin:0;
+    background-color: #2c424c;
+    /*border:1px solid #4f824f;*/
+    border-bottom: 10px solid #4f824f;
+    text-indent: -9999px;
+}
+.agg-7 {
+    margin:0;
+    background-color: #253943;
+    /*border:1px solid #4f824f;*/
+    border-bottom: 10px solid #4f824f;
+    text-indent: -9999px;
+}
+.agg-more {
+    margin:0;
+    background-color: #486877;
+    /*border:1px solid #4f824f;*/
+    border-bottom: 10px solid #4f824f;
+    text-indent: -9999px;
+}
+
+
+
+
 /*
 div.bar {
     position: absolute;
