group barcharts colros aligned with compact view

--- a/partials/planboard.html
+++ b/partials/planboard.html
@@ -25,6 +25,19 @@
     </select>
     <!-- end divisions list -->
 
+    <!-- timeline bar charts -->
+    <div  class="btn-group" 
+          style="margin-left: 10px">
+
+      <button type="button" 
+              class="btn" 
+              ng-click="barCharts()"
+              ng-model="timeline.config.bar" 
+              bs-button>Bar charts</button>
+
+    </div>
+    <!-- end timeline bar charts -->
+
     <!-- timeline layout manager -->
     <div  class="btn-group" 
           style="margin-left: 15px" 
