--- a/partials/planboard.html
+++ b/partials/planboard.html
@@ -335,6 +335,58 @@
       <!-- timelines -->
       <div class="tab-pane active" id="timelineTab">
 
+        <!-- legenda -->
+        <div class="btn-group">
+          <button class="btn dropdown-toggle" data-toggle="dropdown">Legenda <span class="caret"></span></button>
+          <ul class="dropdown-menu">
+
+            <li>
+              <a href="">
+                <div style="background-color: #4f824f;"></div> 
+                Beschikbaar Beide
+              </a>
+            </li>
+            <li>
+              <a href="">
+                <div style="border-top:7px solid black; background-color: #4f824f; height: 7px"></div> 
+                Beschikbaar Noord
+              </a>
+            </li>
+            <li>
+              <a href="">
+                <div style="border-top:7px solid #e08a0c; background-color: #4f824f; height: 7px;"></div> 
+                Beschikbaar Zuid
+              </a>
+            </li>
+            <li>
+              <a href="">
+                <div style="border-top:7px solid #e0c100; background-color: #4f824f; height: 7px;"></div> 
+                Schipper Van Dienst
+              </a>
+            </li>
+            <li>
+              <a href="">
+                <div style="background-color: #a93232;"></div> 
+                Niet Beschikbaar
+              </a>
+            </li>
+            <li>
+              <a href="">
+                <div style="background-color: #65619b;"></div> 
+                Niet Bereikt
+              </a>
+            </li>
+
+            <li class="divider"></li>
+
+            <li><a href="#">Separated link</a></li>
+
+          </ul>
+        </div>
+        <!-- end legenda -->
+
+        <hr>
+
         <!-- user timeline -->
         <div id="myTimeline"></div>
         <!-- end user timeline -->
