--- a/partials/messages.html
+++ b/partials/messages.html
@@ -71,9 +71,8 @@
     	<a href="#msg-{{message.uuid}}" 
           data-toggle="tab"
           ng-click="fixTabHeight(message.uuid)">
-    		<strong>{{message.sender}}</strong><br>
-    		{{message.subject}}<br>
-    		{{message.creationTime}}
+    		<strong>{{message.subject}}</strong>
+    		<br><span wp-name="message.requester | eveURL2Id"></span>
     	</a>
     	
     	
@@ -95,6 +94,7 @@
         <h3 style="margin-top: 0;" class="pull-left">{{message.subject}}</h3>
 
 	        <div class="pull-right">
+	          {{message.creationTime | nicelyDate}}
 	          <button type="submit" ng-show="boxes.inbox"
 	                  ng-click="replyMessage(message)" class="btn">Reply</button>
 	       	  <button type="button" ng-show="boxes.inbox || boxes.outbox"
@@ -112,10 +112,22 @@
       
 
       <hr>
-
-      <dl>
-			  <dt>Sender</dt>
-			  	<dd>{{message.sender}}</dd>
+			
+      		<dl>
+      			<dt><span wp-name="message.requester | eveURL2Id"></span> </dt>
+      			<dd>to</dd> 
+      			<dt>
+					<ul>
+						<li ng-repeat="rec in message.responder">
+							<span wp-name="rec | eveURL2Id">
+						</li>
+					</ul>
+				</dt>
+			  	
+      		  
+			  	<dd>{{message.question_text}}</dd>
+			  	
+			  <!-- 
 			  <dt>Receiver</dt>
 			  	<dd>{{message.receiver}}</dd>
 			  <dt>Date</dt>
@@ -124,14 +136,13 @@
 			  	<dd>{{message.module}}</dd>
 			  <dt>Priority</dt>
 			  	<dd>{{message.priority}}</dd>
-			  <dt>Question Text</dt>
-			  	<dd>{{message.question_text}}</dd>
+			  
 			  <dt>State</dt>
 			  	<dd>{{message.state}}</dd>
 			  <dt>Subject</dt>
 			  	<dd>{{message.subject}}</dd>
 			  <dt>Type</dt>
-			  	<dd>{{message.type}}</dd>
+			  	<dd>{{message.type}}</dd> -->
 			</dl>
     
     </div>
@@ -233,23 +244,23 @@
 
 
 <!-- Trash view --> 
-<div ng-show="trashview" ng-hide="listview">
+<div ng-show="trashview" >
 	
 <div>
 	<div class="pull-right">
 		<button type="button"
-		ng-click="restoreSelectedMsg()"
+		ng-click="restoreSelectedMsg(selection)"
 		class="btn">
 			<i class="icon-edit icon-white"></i> Restore
 		</button>
 		<button type="button"
-		ng-click="deleteSelectedMsg()"
-		class="btn btn-danger">
+		ng-click="askDeleteSelectedMsg(selection)"
+		class="btn btn-danger" bs-modal="'partials/modal.html'">
 			<i class="icon-trash icon-white"></i> Delete Forever
 		</button>
 		<button type="button"
-		ng-click="emptyMsgTrash()"
-		class="btn btn-warning">
+		ng-click="askEmptyMsgTrash()"
+		class="btn btn-warning" bs-modal="'partials/modal.html'">
 			<i class="icon-trash icon-white"></i> Empty Trash
 		</button>
 	</div>
@@ -279,9 +290,7 @@
 		<tbody>
 			<tr ng-repeat="message in messages">
 				<td>
-				<input type="checkbox"
-				ng-model="selection[message.uuid]"
-				ng-checked="selectionMaster">
+					<input type="checkbox" ng-model="selection[message.uuid]" ng-checked="selectionMaster">
 				</td>
 				<td><a href="#/message/{{message.uuid}}/view">{{message.subject}}</a></td>
 				<td><span wp-name="message.requester | eveURL2Id"></span></td>
